# CodeCollab

./: .gitignore  README.md
code-smells/: rules.md
code-smells/java/: README.md  settings.gradle.kts
code-smells/java/app/: build.gradle.kts
code-smells/python/: pyproject.toml
code-smells/python/src/: scratchcards.ne.py
code-smells/python/tests/: test_scratchcards.py
code-smells/rust/: Cargo.toml
code-smells/scala/: README.md  build.sbt
code-smells/scala/.devcontainer/: devcontainer.json
scratchcards/: scratchcards.md
scratchcards/python/src/: scratchcards.py
